--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.3.6",
     "@mantine/hooks": "^8.3.6",
+    "clsx": "^2.1.1",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
